# data-centric-ai-competition

./: .gitignore  Untitled.ipynb  config.json  dcgan.ipynb  main.ipynb  pyproject.toml
MNIST_DCGAN_results_100_epochs/: MNIST_DCGAN_train_hist.pkl
efficient_capsnet/models/: __init__.py  efficient_capsnet_graph_mnist.py  efficient_capsnet_graph_multimnist.py  efficient_capsnet_graph_smallnorb.py  model.py  original_capsnet_graph_mnist.py
efficient_capsnet/utils/: __init__.py  dataset.py  layers.py
