[tool.poetry]
name = "data-centric-ai-competition"
version = "0.1.0"
description = ""
authors = ["Jordan <zjzhang325@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.16"
matplotlib = "^3.4.2"
ipympl = "^0.7.0"
tensorflow = "^2.5.0"
pandas = "^1.3.1"
tqdm = "^4.61.2"
tensorflow-datasets = "^4.4.0"
opencv-python = "^4"
tensorflow-addons = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
